--- a/niu_hr_attendance/reports/hr_attendance_views.xml
+++ b/niu_hr_attendance/reports/hr_attendance_views.xml
@@ -4,19 +4,22 @@
             <field name="name">hr.attendance.form.inherit</field>
             <field name="model">hr.attendance</field>
             <field name="inherit_id" ref="hr_attendance.hr_attendance_view_form"/>
-            <field name="arch" type="xml">
-                <xpath expr="//field[@name='check_in']" position="after">
-                    <group>
-                        <field name="check_in_date"/>
-                        <field name="check_in_time" widget="float_time"/>
-                        <separator/>
-                    </group>
-                </xpath>
-                
+            <field name="arch" type="xml">                
                 <xpath expr="//field[@name='check_out']" position="after">
                     <group>
-                        <field name="check_out_date"/>
-                        <field name="check_out_time" widget="float_time"/>
+                        <separator/>
+                        <group col="4">
+                            <label for="check_in_date" string="Check In"/>
+                            <field name="check_in_date" nolabel="1"/>
+                            <label for="check_in_time" string="At"/>
+                            <field name="check_in_time" widget="float_time" nolabel="1"/>
+                        </group>
+                        <group col="4" invisible="not check_out">
+                            <label for="check_out_date" string="Check out"/>
+                            <field name="check_out_date" nolabel="1"/>
+                            <label for="check_out_time" string="At"/>
+                            <field name="check_out_time" widget="float_time" nolabel="1"/>
+                        </group>
                     </group>
                 </xpath>
             </field>
